Fixed issue with the project menu in landscape on mobile.

--- a/workspaces/frontend/components/projects/projects.module.scss
+++ b/workspaces/frontend/components/projects/projects.module.scss
@@ -80,7 +80,7 @@ $translateZ: calc((#{$numItems} * #{$itemDim}) / (2 * #{$PI}));
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) and (orientation: "portrait") {
   .leftArrow,
   .rightArrow {
     visibility: hidden !important;
@@ -98,7 +98,7 @@ $translateZ: calc((#{$numItems} * #{$itemDim}) / (2 * #{$PI}));
     }
   }
 }
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 425px) and (orientation: "portrait") {
   .leftArrow,
   .rightArrow {
     visibility: hidden !important;
